--- a/src/app/_modules/auth/login/login.component.html
+++ b/src/app/_modules/auth/login/login.component.html
@@ -13,7 +13,7 @@
                     <p-password id="password1" [(ngModel)]="password" placeholder="Insira sua senha" [toggleMask]="true"
                         styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
-                    <button pButton pRipple label="Entrar" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    <button pButton pRipple label="Entrar" class="w-full p-3 text-xl" [routerLink]="['/pages/dashboard']"></button>
                 </div>
             </div>
         </div>
